# sonarqube-code-quality-assistant

./: .env.example  .gitignore  README.md  pyproject.toml
src/sonarqube_quality_assistant/: main.py
src/sonarqube_quality_assistant/server/: __init__.py  app.py  notification_runtime.py  notifications.py  prompts.py  resources.py  sampling.py  tools.py  watcher.py
src/sonarqube_quality_assistant/services/: __init__.py  comparison_service.py  issue_service.py  project_service.py  quality_report_service.py
src/sonarqube_quality_assistant/sonarqube/: __init__.py  client.py  endpoints.py  mappers.py
src/sonarqube_quality_assistant/utils/: __init__.py  env.py  logger.py
tests/: __init__.py  test_client.py  test_env.py  test_issue_and_reports.py  test_mappers.py  test_project_service.py  test_runtime_tools_app_main.py  test_server_modules.py
