[project]
name = "sonarqube-quality-assistant"
version = "1.0.0"
description = "An MCP server that connects AI assistants to SonarQube quality data."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mcp[cli]>=1.12.0",
  "httpx>=0.28.1",
  "python-dotenv>=1.0.1",
  "pydantic>=2.10.4",
  "pysonar",
  "groq",
  "pytest-cov"
]

[project.scripts]
sonarqube-quality-assistant = "sonarqube_quality_assistant.main:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]